Se agregó la funcionalidad del form con formspree

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <section class="seccion" id="seccion_contacto">
             <h2>Formulario de contacto</h2>
-            <form method="post" action="/" >
+            <form method="POST" action="https://formspree.io/f/xpwwpnje" >
                 <div class="form_div">
                     <label for="name">Nombre:</label>
                     <input type="text" name="name" id="name" required class="form_input">
