Se modificaron las rutas de las imagenes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>Soy Tomás Lardizábal, estudiante de Ingeniería en Sistemas de Información y próximo desarrollador FULLSTACK.</p>
             </section>
             <section class="seccion" id="img_aboutme">
-                <img src="/images/img_tomas.jpg" id="img_tomas">
+                <img src="./images/img_tomas.jpg" id="img_tomas">
             </section>
         </div>
         <section class="seccion">
@@ -67,13 +67,13 @@
             </form>
         </section>
     </main>
-    <a href="#home" id="button_home"><img src="/images/flecha_arriba.png" class="img_footer"></a>
+    <a href="#home" id="button_home"><img src="./images/flecha_arriba.png" class="img_footer"></a>
     <footer class="footer" id="contacto">
         <p>© 2024 Tomás Lardizábal.</p>
         <div>
-            <a href="https://github.com/tomaslardizabal" target="_blank"><img src="/images/github.png" class="img_footer"></a>
-            <a href="https://www.linkedin.com/in/tom%C3%A1s-lardiz%C3%A1bal/" target="_blank"><img src="/images/linkedin.png" class="img_footer"></a>
-            <a href="https://www.instagram.com/tomas.lardizabal/" target="_blank"><img src="/images/instagram.png" class="img_footer"></a>     
+            <a href="https://github.com/tomaslardizabal" target="_blank"><img src="./images/github.png" class="img_footer"></a>
+            <a href="https://www.linkedin.com/in/tom%C3%A1s-lardiz%C3%A1bal/" target="_blank"><img src="./images/linkedin.png" class="img_footer"></a>
+            <a href="https://www.instagram.com/tomas.lardizabal/" target="_blank"><img src="./images/instagram.png" class="img_footer"></a>     
         </div>
     </footer>
     <script src="script.js"></script>
