Actualizacion de form de contacto

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
                 <div class="form_div">
                     <label for="mensaje">Mensaje:</label>
-                    <textarea type="text" name="mensaje" id="mensaje" required></textarea>
+                    <textarea type="text" name="mensaje" id="mensaje" required class="form_input"></textarea>
                 </div> 
                 <button type="submit" id="button_form">Enviar</button>                      
             </form>
